# CAPTCHArd

./: .gitignore  README.md  pyproject.toml  quick_test.py  requirements.txt
.github/workflows/: ci.yml
captchard/: __init__.py
captchard/nsut/: __init__.py
captchard/nsut/adapters/: ims_captcha_client.py  model_loader.py
captchard/nsut/api/: __init__.py  predict.py
captchard/nsut/config/: settings.py
captchard/nsut/services/: __init__.py  dataset_service.py  inference_service.py  predict_service.py
checksums/: nsut.h5.sha256
demo_app/: app.py  backend.py
demo_app/app/: main.py
demo_app/assets/: chagne_bg.py
demo_app/ui/: streamlit_app.py
docs/: USAGE.md
research/: try.ipynb
scripts/: download_model.py
tests/: test_public_api.py
