[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "captchard"
version = "0.1.0"
description = "CAPTCHArd: A modular, robust CAPTCHA prediction service (currently supporting NSUT-style captchas)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "NSUT Captcha Contributors" }
]
dependencies = [
  "beautifulsoup4",
  "keras-tuner",
  "matplotlib",
  "numpy",
  "opencv-python-headless",
  "plotly",
  "requests",
  "scikit-learn",
  "seaborn",
  "streamlit",
  "tensorflow",
  "tqdm",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["captchard*"]

